<resources>
    <string name="app_name">VengersMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="LoginBut">Log in</string>
    <string name="RegisterBut">Register</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_page_title">Profile</string>
    <string name="tab_text_1">Collection</string>
    <string name="tab_text_2">Basic Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CreateHunt">Create a Hunt</string>
    <string name="WhichPark">Select a Park</string>
    <string name="HowManyObj">How many artifacts in your hunt?</string>
    <string name="testBut">Map</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="goToRegisterBut">Go to Register</string>
    <string name="goToLoginBut">Go to Log in</string>
    <string name="signOutBut">Sign out</string>
    <string name="hunt">Hunt</string>
    <string name="lobbyName">Name:</string>
    <string name="lobbyPark">Park:</string>
    <string name="lobbyPlayers">Players:</string>
    <string name="locationPicker">Pick a location</string>
    <string name="artName">Artifact Name</string>
    <string name="enterName">Enter Name</string>
    <string name="ok">Ok</string>
    <string name="createHunt">Create Hunt</string>
    <string name="JoinHunt">Join a Hunt</string>
    <string name="HuntName">name</string>
    <string name="HuntPass">password</string>
    <string name="EditArtifacts">Edit your Artifacts</string>
    <string name="EditArtifact">Edit Artifact</string>
    <string name="tvUserLabel">Email: </string>
    <string name="btnChange">Change</string>
    <string name="HuntNamePass">Enter Hunt name and password</string>
    <string name="logout">Logout</string>
    <string name="fab_nothing_here">nothing here</string>
    <string name="scan_for_artifacts">Click here to scan for artifacts</string>
    <string name="findArtifacts">Artifacts left to find</string>
    <string name="artifactHunt">Hunt for Artifacts</string>
</resources>
