<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginBut" />
    <Button
        android:id="@+id/goToRegisterBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToRegister"
        android:text="@string/goToRegisterBut" />

</LinearLayout>