<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/huntText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/hunt" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/lobbyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lobbyName" />

            <TextView
                android:id="@+id/lobbyPark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lobbyPark" />

            <TextView
                android:id="@+id/lobbyPlayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lobbyPlayers" />
        </TableRow>
    </TableLayout>
</LinearLayout>